--- a/REST-API-feb-28.qmd
+++ b/REST-API-feb-28.qmd
@@ -6,6 +6,7 @@ format:
   revealjs: 
     theme: [serif, custom.scss]
     footer: "[Home](index.html)"
+    self-contained: true
 ---
 
 ## What is a REST API?
